feat: add OpenGL texture renderer
- Created Renderer class for texture display
- Vertex/fragment shaders for fullscreen quad
- GLEW for OpenGL function loading
- Test gradient pattern in main.cpp
- BGRA texture format (CEF-compatible)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,15 +11,21 @@ find_package(SDL2 REQUIRED)
 # OpenGL
 find_package(OpenGL REQUIRED)
 
+# GLEW
+find_package(GLEW REQUIRED)
+
 add_executable(jellyfin-desktop
     src/main.cpp
+    src/renderer.cpp
 )
 
 target_include_directories(jellyfin-desktop PRIVATE
     ${SDL2_INCLUDE_DIRS}
+    ${CMAKE_SOURCE_DIR}/src
 )
 
 target_link_libraries(jellyfin-desktop PRIVATE
     ${SDL2_LIBRARIES}
     OpenGL::GL
+    GLEW::GLEW
 )
