feat: add CEF app and client skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,27 +5,42 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# CEF configuration
+set(CEF_ROOT "${CMAKE_SOURCE_DIR}/third_party/cef" CACHE PATH "CEF binary distribution root")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+find_package(CEF REQUIRED)
+
 # SDL2
 find_package(SDL2 REQUIRED)
 
 # OpenGL
 find_package(OpenGL REQUIRED)
 
-# GLEW
-find_package(GLEW REQUIRED)
-
 add_executable(jellyfin-desktop
     src/main.cpp
     src/renderer.cpp
+    src/cef_app.cpp
+    src/cef_client.cpp
 )
 
 target_include_directories(jellyfin-desktop PRIVATE
+    ${CEF_INCLUDE_DIRS}
     ${SDL2_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/src
 )
 
 target_link_libraries(jellyfin-desktop PRIVATE
+    ${CEF_LIBRARIES}
     ${SDL2_LIBRARIES}
     OpenGL::GL
-    GLEW::GLEW
+)
+
+# Copy CEF resources to build directory
+add_custom_command(TARGET jellyfin-desktop POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CEF_ROOT}/Resources"
+        "$<TARGET_FILE_DIR:jellyfin-desktop>"
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CEF_ROOT}/Release"
+        "$<TARGET_FILE_DIR:jellyfin-desktop>"
 )
