fix: add GLEW initialization and fix resource path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,5 +53,5 @@ add_custom_command(TARGET jellyfin-desktop POST_BUILD
 add_custom_command(TARGET jellyfin-desktop POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${CMAKE_SOURCE_DIR}/resources"
-        "$<TARGET_FILE_DIR:jellyfin-desktop>/../resources"
+        "$<TARGET_FILE_DIR:jellyfin-desktop>/resources"
 )
