feat: native context menu overlay with stb_truetype rendering
- MenuOverlay class renders menu items with font rendering
- Blends onto CEF frame buffer in compositor update loop
- Handles mouse input for hover/click/dismiss
- Uses system fonts (DejaVu, Hack, Liberation, Noto, Roboto)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ add_executable(jellyfin-desktop
     src/wayland_subsurface.cpp
     src/wayland-protocols/color-management-v1-code.c
     src/settings.cpp
+    src/menu_overlay.cpp
 )
 
 target_include_directories(jellyfin-desktop PRIVATE
