fix: declare mpv library as BYPRODUCTS for ninja
Ninja requires knowing that mpv_build produces libmpv.so, otherwise it
fails with "missing and no known rule to make it" on clean builds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,7 @@ add_custom_target(mpv_build
     COMMAND meson compile -C build
     WORKING_DIRECTORY ${MPV_SOURCE_DIR}
     COMMENT "Building mpv (meson handles incremental builds)"
+    BYPRODUCTS ${MPV_LIBRARY}
 )
 
 set(MPV_INCLUDE_DIRS "${MPV_SOURCE_DIR}/include")
